--- a/Web Proje/css/ilgi.css
+++ b/Web Proje/css/ilgi.css
@@ -8,7 +8,7 @@ body{
  }
  #navbar {
 	opacity: 0.8;
-	border-bottom: 1px solid #00FFFF;
+	border-bottom: 1px solid lightseagreen;
 }
 #nav a{
   color: #fff;
@@ -17,7 +17,7 @@ body{
   display: inline-block;
 }
 #nav a:hover{
-  color:#00FFFF;
+  color:lightseagreen;
 }
 .search {
   background-color: transparent;
