--- a/Web Proje/css/sehrim.css
+++ b/Web Proje/css/sehrim.css
@@ -8,7 +8,7 @@ body {
 }
 #navbar {
   opacity: 0.8;
-  border-bottom: 1px solid royalblue;
+  border-bottom: 1px solid lightseagreen;
 }
 #nav a {
   color: #fff;
@@ -17,7 +17,7 @@ body {
   display: inline-block;
 }
 #nav a:hover {
-  color: royalblue;
+  color:lightseagreen;
 }
 
 .carousel {
