--- a/Web Proje/css/ozgecmis.css
+++ b/Web Proje/css/ozgecmis.css
@@ -1,7 +1,7 @@
 body {
     margin: 0;
     padding: 0;
-    background-color:white !important;
+    background-color:#212529  !important;
 }
 
 #navbar {
